--- a/views/campgrounds/edit.ejs
+++ b/views/campgrounds/edit.ejs
@@ -2,29 +2,32 @@
 <div class="row">
     <h1 class="text-center">Edit Campground</h1>
     <div class="col-6 offset-3">
-        <form action="/campgrounds/<%= campground._id %>?_method=PUT" method="POST">
+        <form class="validated-form" novalidate action="/campgrounds/<%= campground._id %>?_method=PUT" method="POST">
             <div class="mb-3">
                 <label class="form-label" for="title">Title</label>
-                <input value="<%= campground.title %> " class="form-control" type="text" id='title'name="campground[title]">
+                <input required value="<%= campground.title %> " class="form-control" type="text" id='title'name="campground[title]">
             </div>
             <div class="mb-3">
                 <label class="form-label" for="location">Location</label>
-                <input value="<%= campground.location %>" class="form-control" type="text" id='location'name="campground[location]">
+                <input required value="<%= campground.location %>" class="form-control" type="text" id='location'name="campground[location]">
             </div>
             <div class="mb-3">
                 <label class="form-label" for="image">Image URL</label>
-                <input value="<%= campground.image %>" class="form-control" type="text" id='image'name="campground[image]">
+                <input required value="<%= campground.image %>" class="form-control" type="text" id='image'name="campground[image]">
+                <div class="valid-feedback">
+                    Looks good!
+                </div>
             </div>
             <div class="mb-3">
                 <label class="form-label" for="price">Campground Price</label>
                 <div class="input-group">
                     <span class="input-group-text" id="price-label">$</span>
-                    <input value="<%= campground.price %>" name="campground[price]" id="price" type="text" class="form-control" placeholder="0.00" aria-label="price" aria-describedby="price-label">
+                    <input required value="<%= campground.price %>" name="campground[price]" id="price" type="text" class="form-control" placeholder="0.00" aria-label="price" aria-describedby="price-label">
                 </div>
             </div>
             <div class="mb-3">
                 <label class="form-label" for="description">Description</label>
-                <textarea class="form-control" type="text" id='description'name="campground[description]"><%= campground.description %></textarea>
+                <textarea required class="form-control" type="text" id='description'name="campground[description]"><%= campground.description %></textarea>
             </div>
             <div class="mb-3">
                 <button class="btn btn-info">Update Campground</button>
