--- a/views/campgrounds/new.ejs
+++ b/views/campgrounds/new.ejs
@@ -2,29 +2,32 @@
     <div class="row">
         <h1 class="text-center">New Campground</h1>
         <div class="col-6 offset-3">
-            <form action="/campgrounds" method="POST">
+            <form class="validated-form" action="/campgrounds" method="POST" novalidate>
                 <div class="mb-3">
                     <label class="form-label" for="title">Title</label>
-                    <input class="form-control" type="text" id='title'name="campground[title]">
+                    <input required class="form-control" type="text" id='title'name="campground[title]">
                 </div>
                 <div class="mb-3">
                     <label class="form-label" for="location">Location</label>
-                    <input class="form-control" type="text" id='location'name="campground[location]">
+                    <input required class="form-control" type="text" id='location'name="campground[location]">
                 </div>
                 <div class="mb-3">
                     <label class="form-label" for="image">Image URL</label>
-                    <input class="form-control" type="text" id='image'name="campground[image]">
+                    <input required class="form-control" type="text" id='image'name="campground[image]">
+                    <div class="valid-feedback">
+                        Looks good!
+                    </div>
                 </div>
                 <div class="mb-3">
                     <label class="form-label" for="price">Campground Price</label>
                     <div class="input-group">
                         <span class="input-group-text" id="price-label">$</span>
-                        <input name="campground[price]" id="price" type="text" class="form-control" placeholder="0.00" aria-label="price" aria-describedby="price-label">
+                        <input required name="campground[price]" id="price" type="text" class="form-control" placeholder="0.00" aria-label="price" aria-describedby="price-label">
                     </div>
                 </div>
                 <div class="mb-3">
                     <label class="form-label" for="description">Description</label>
-                    <textarea class="form-control" type="text" id='description'name="campground[description]"></textarea>
+                    <textarea required class="form-control" type="text" id='description'name="campground[description]"></textarea>
                 </div>
                 <div class="mb-3">
                     <button class="btn btn-success">Add Campground</button>
