--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -24,14 +24,17 @@
         </div>
 
         <h2>Leave a Review</h2>
-        <form action="/campgrounds/<%= campground._id %>/reviews" method="POST" class="mb-3">
+        <form novalidate action="/campgrounds/<%= campground._id %>/reviews" method="POST" class="mb-3 validated-form">
             <div class="mb-3">
                 <label for="rating" class="form-label">Rating</label>
                 <input type="range" class="form-range" name="review[rating]" id="rating" min="1" max="5">
             </div>
             <div class="mb-3">
                 <label class="form-label" for="body">Review</label>
-                <textarea class="form-control" name="review[body]" id="body" cols="30" rows="3"></textarea>
+                <textarea class="form-control" required name="review[body]" id="body" cols="30" rows="3"></textarea>
+                <div class="valid-feedback">
+                    Looks good!
+                </div>
             </div>
             <button class="btn btn-success">Submit</button>
         </form>
